# Article-Generator

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.gpu  README.md  deploy_docker.sh  main.py  pyproject.toml  requirements.txt  sample_request.json
app/: __init__.py  generator.py  main.py  pipeline.py  prompting.py  schemas.py
data/raw/: README.md
model/article-generator-flan-t5-lora/: README.md  generation_config.json  tokenizer.json
report/: report.md
sample/: sample_curl.txt  sample_request.json
training/: __init__.py  build_dataset.py  train.py
